# SecurityComponent

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  c-decoder.xml  configure  decoder.xml  output
config/: agent.config  rules.config  schedule.config  stagedfunction.txt  syslog  syslog.test  test-rules.xml
ids/: rootkit_files.txt  rootkit_trojans.txt
include/: agentUtils.hpp  common.hpp
include/comm/: client  client.hpp  server  server.hpp
include/controller/: agent.hpp  analysisController.hpp  analysis_controller.hpp  base_api.hpp  document.txt  firmwareController.hpp  logController.hpp  log_controller.hpp  mainController.hpp  main_controller.hpp  monitorController.hpp  (+8 more)
reference/: file-monitor-references.txt  schedular-reference.txt  secirut_policy_management.txt
rules/: pam_rules.xml  syslog_rules.xml
src/: agent.cpp  agentUtils.cpp  command_service.cpp  commandservice.cpp  common.cpp  connection.cpp  fwservice.cpp  loganalysis.cpp  loganalysis_service.cpp  logcollector_service.cpp  logservice.cpp  main.cpp  monitor.cpp  monitor_service.cpp  mqtt_service.cpp  patch_service.cpp  rqueue.cpp  watchservice.cpp
staged/: connection.cpp  connection.hpp  main_controller.hpp  mqtt_controller.hpp  mqtt_service.hpp  newagent.config  reportgeneration.hpp  rqueue.cpp  rqueue.hpp  schedular_controller.hpp  stagedfunction.txt  udp-client.hpp  watchFileController.hpp  watchservice.cpp  watchservice.hpp
test/: 29-aug-loganalysis.cpp  agentutils-test.cpp  consume  consumer.cpp  mqtt_controller_test.cpp  rootcheck_google_test.cpp  test-rest-api.cpp  test.cpp
(+102 files in other folders)
